--- a/CodeWheelApp/CodeWheelApp.csproj
+++ b/CodeWheelApp/CodeWheelApp.csproj
@@ -45,6 +45,7 @@
     <None Remove="resources\OUTER_SNEAKILY.png" />
     <None Remove="resources\OUTER_THEATRICALLY.png" />
     <None Remove="resources\OUTER_VICIOUSLY.png" />
+    <None Remove="resources\scroll.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -154,6 +155,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="resources\OUTER_VICIOUSLY.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="resources\scroll.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
